--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "cosmic-readme",
+  "name": "static-site",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tra8brown/cosmic-readme.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tra8brown/cosmic-readme/issues"
-  },
-  "homepage": "https://github.com/tra8brown/cosmic-readme#readme",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "inquirer": "^8.1.1"
+    "inquirer": "^6.3.1"
   }
 }
